examples/fail/start.xyz
5
-175.65142
C	0.11255379929269559 1.7995288840271477 0.0269912153508156
H	-0.7724842822483952 1.3120213062001296 -0.39094846172541203
H	0.7408900525236097 0.9610356477886796 0.3403987051900358
H	-0.5690561730474951 -1.2785817268904975 0.5686486461262907
H	-0.49812110728968556 -1.246141746363453 -0.12655704281977243
